[package]
name = "tatara-reconciler"
description = "The unified FluxCD-adjacent Kubernetes controller — reconciles Process CRDs as Unix processes, composes tatara three-pillar attestation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tatara-reconciler"
path = "src/main.rs"

[[bin]]
name = "tatara-crd-gen"
path = "src/bin/crd_gen.rs"

[[bin]]
name = "tatara-check"
path = "src/bin/tatara-check.rs"

[dependencies]
tatara-core = { path = "../tatara-core" }
tatara-process = { path = "../tatara-process" }
tatara-lattice = { path = "../tatara-lattice" }
tatara-lisp = { path = "../tatara-lisp" }
tatara-domains = { path = "../tatara-domains" }

# For tatara-check — CustomResourceExt + serde_yaml come from deps above.

# Kubernetes
kube = { version = "0.99", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
schemars = { version = "0.8", features = ["chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Errors + logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing
blake3 = "1"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Observability endpoint
axum = { version = "0.8", features = ["json"] }
prometheus = "0.13"

# CLI
clap = { version = "4", features = ["derive", "env"] }
