[package]
name = "tatara-reconciler"
description = "The unified FluxCD-adjacent Kubernetes controller — reconciles Process CRDs as Unix processes, composes tatara three-pillar attestation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tatara-reconciler"
path = "src/main.rs"

[[bin]]
name = "tatara-crd-gen"
path = "src/bin/crd_gen.rs"

[[bin]]
name = "tatara-check"
path = "src/bin/tatara-check.rs"

[dependencies]
tatara-core = { path = "../tatara-core" , version = "0.2.65" }
tatara-process = { path = "../tatara-process" , version = "0.2.65" }
tatara-lattice = { path = "../tatara-lattice" , version = "0.2.65" }
tatara-lisp = { path = "../tatara-lisp" , version = "0.2.65" }
tatara-domains = { path = "../tatara-domains" , version = "0.2.65" }

# Typed config + hot-reload (XDG discovery + env override + ArcSwap).
# Git-sourced rather than path — the substrate's Nix image build
# sandbox uses tatara/src as the root context, so external path deps
# can't resolve. Use a path override during local-only iteration via
# `[patch."https://github.com/pleme-io/shikumi"]` in this file.
shikumi = { git = "https://github.com/pleme-io/shikumi" , version = "0.1" }

# For tatara-check — CustomResourceExt + serde_yaml come from deps above.

# Kubernetes
kube = { version = "0.99", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
schemars = { version = "0.8", features = ["chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Errors + logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing
blake3 = "1"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }
# humantime moved into tatara-process (lifetime_clock primitive) — reconciler
# transitively gets it via tatara-process; keep listed here too because the
# binary may want it directly later (no harm in the duplicate now).
humantime = "2"

# Observability endpoint
axum = { version = "0.8", features = ["json"] }
prometheus = "0.13"

# CLI
clap = { version = "4", features = ["derive", "env"] }
