[package]
name = "tatara-terreiro"
description = "Arena-enclosed Lisp virtual environments — bumpalo-backed, sealable, serializable compilers you can author in Lisp and deploy as typed artifacts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tatara-lisp = { path = "../tatara-lisp" , version = "0.2.65" }
tatara-lisp-derive = { path = "../tatara-lisp-derive" , version = "0.2.65" }
tatara-eval = { path = "../tatara-eval" , version = "0.2.65" }
tatara-nix = { path = "../tatara-nix" , version = "0.2.65" }

# Arena allocation — the terreiro's namesake. One Bump per sealed environment.
bumpalo = { version = "3", features = ["collections"] }

# Canonical identity for sealed snapshots (BLAKE3 of the spec + registered
# domains + preloaded macro library).
blake3 = "1"
hex = "0.4"

# Serialization for snapshots on disk.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2"

# Nord-themed CLI UX for the tatara-terreiro binary.
tatara-ui = { path = "../tatara-ui" , version = "0.2.65" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "tatara-terreiro"
path = "src/bin/tatara-terreiro.rs"
