[package]
name = "tatara-testing"
description = "Test utilities and in-memory server for tatara"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tatara-core = { path = "../tatara-core" }
tatara-engine = { path = "../tatara-engine" }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP server (for test server)
axum = { version = "0.8", features = ["json"] }
tower = { version = "0.5", features = ["util"] }

# Time + IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
