[package]
name = "tatara-ui"
description = "Nord-themed CLI UX for the tatara toolchain — typed palette + sigils + UiEvent stream + cache-aware renderer, all content-addressable as tatara-nix Derivations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tatara-lisp = { path = "../tatara-lisp" }
tatara-lisp-derive = { path = "../tatara-lisp-derive" }

blake3 = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
owo-colors = "4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
